Revise README for Java Shell project
Updated README to provide clearer instructions and features of the Java Shell implementation.